# confidantic

./: .gitignore  README.md  main.py  pyproject.toml
.config/: confidantic.yaml
demo/: demo.py
src/confidantic/: __init__.py  cli.py  versioning.py
